init. lexer.
uv scaled triplanar mapping
init.Packets.
Registrable. void setRegistryID().
StringUtils some update.