@@ -11,10 +11,7 @@ import outskirts.network.ChannelHandler;
 import outskirts.network.login.PacketHandlerLoginServer;
 import outskirts.server.management.PlayerList;
 import outskirts.server.management.PlayerManager;
-import outskirts.util.GameTimer;
-import outskirts.util.Side;
-import outskirts.util.SystemUtil;
-import outskirts.util.Validate;
+import outskirts.util.*;
 import outskirts.util.concurrent.Scheduler;
 import outskirts.util.logging.Log;
 import outskirts.world.WorldServer;
@@ -22,6 +19,8 @@ import outskirts.world.WorldServer;
 import java.io.*;
 import java.util.HashMap;
 import java.util.Map;
+
+import static outskirts.util.logging.Log.LOGGER;
 
 public class OutskirtsServer {
 
@@ -44,11 +43,11 @@ public class OutskirtsServer {
 
             while (this.running)
             {
-                long startnano = System.nanoTime();
+                long n = System.nanoTime();  // nano time on tick start.
 
                 this.runTick();
 
-                this.sync(startnano, 1_000_000_000 / GameTimer.TPS);
+                this.sync(n, 1f / GameTimer.TPS);
             }
         }
         catch (Throwable t)
@@ -74,7 +73,7 @@ public class OutskirtsServer {
         Log.info("Init world...");
         loadWorld(ServerSettings.DEFAULT_WORLD);
 
-        Log.info("Starting server in port %s", ServerSettings.SERVER_PORT);
+        Log.info("Starting server in port {}", ServerSettings.SERVER_PORT);
 
         ChannelHandler.bindServerEndpoint(ServerSettings.SERVER_PORT, conn -> {
             conn.eventBus().register(new PacketHandlerLoginServer(conn));
@@ -114,7 +113,7 @@ public class OutskirtsServer {
 //            world.unloadAllTerrains();
 //        }
 
-        Log.info("Server stopped.");
+        LOGGER.info("Server stopped.");
     }
 
     public static void addScheduledTask(Runnable runnable) {
@@ -153,33 +152,34 @@ public class OutskirtsServer {
 
 
     private void startConsoleInputThread() {
-        CommandSender sender = new ConsoleCommandSender();
+        CommandSender consolesender = new ConsoleCommandSender();
 
-        Thread thread = new Thread(() -> {
+        Thread t = new Thread(() -> {
             try {
                 BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
                 String line;
                 while ((line = br.readLine()) != null) {
-                    Command.dispatchCommand(sender, line);
+                    Command.dispatchCommand(consolesender, line);
                 }
             } catch (IOException ex) {
                 ex.printStackTrace();
             }
         }, "ServerConsoleInputThread");
-        thread.setDaemon(true);
-        thread.start();
+        t.setDaemon(true);
+        t.start();
     }
 
     /**
      * @param startnano step start time in nanotime
-     * @param stepnano fixed step length in nanotime
+     * @param steplen fixed step length in seconds
      */
-    private void sync(long startnano, long stepnano) throws InterruptedException {
+    private void sync(long startnano, float steplen) throws InterruptedException {
         long usednano = System.nanoTime() - startnano;
+        long stepnano = (long)(1_000_000_000 * steplen);
 
         if (usednano > stepnano) {
             long overload = usednano - stepnano;
-            Log.warn("Server overload! tick over %sms (used %sms), skipping %s tick(s).", overload/1_000_000, usednano/1_000_000, overload/stepnano);
+            LOGGER.warn("Server overload! tick over {}ms (used {}ms), skipping {} tick(s).", overload/1_000_000, usednano/1_000_000, overload/stepnano);
         } else {
             SystemUtil.nanosleep(stepnano - usednano);
         }
@@ -196,6 +196,18 @@ public class OutskirtsServer {
     public static void main(String[] args) {
 
         Side.CURRENT = Side.SERVER;
+
+        // DEFAULT: -ea  (java9+:) --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+        // OSX: -XstartOnFirstThread -Djava.awt.headless=true -ea
+        System.setProperty("org.lwjgl.librarypath", new File("libraries/platform/"+ SystemUtil.OS_NAME.toLowerCase()).getAbsolutePath());
+
+        if (CollectionUtils.contains(args, "--tmploadlibs")) { //tmp arg
+            for (File file : FileUtils.listFiles(new File("libraries"))) {
+                if (file.isFile() && file.getName().endsWith(".jar")) {
+                    SystemUtil.addClasspath(file);
+                }
+            }
+        }
 
         new OutskirtsServer().run();
     }
